# mango-trading

./: pyproject.toml
market_data/: price.py  settings.py
market_data/binance/: realtime.py
market_data/bitget/: market_channel.py
strategy/indicator/: ema.py  test_ema.py
strategy/moving_average_cross_over/: backtest.py
